# merge

./: README.md  pyproject.toml  setup.py
extra/: otc_send.py  ragic_open.py
merge/: __init__.py  main.py
merge/api/: opentimeclock.py  ragic.py
merge/common/: enums.py  helpers.py
merge/logger/: __init__.py  pkg_logger.py
merge/process/: hours.py
